updated configs and removed git trash